[gd_scene load_steps=3 format=3 uid="uid://dunit1234abcd"]

[ext_resource type="Script" uid="uid://cg812qhaxcooa" path="res://scripts/combat/unit.gd" id="1_unit"]

[sub_resource type="CircleShape2D" id="CircleShape2D_click"]
radius = 28.0

[node name="Unit" type="Node2D"]
z_index = 10
script = ExtResource("1_unit")

[node name="SelectionIndicator" type="Sprite2D" parent="."]
z_index = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1

[node name="LetterLabel" type="Label" parent="."]
z_index = 2
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = -24.0
offset_top = -40.0
offset_right = 24.0
offset_bottom = -34.0
value = 100.0
show_percentage = false

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 1
collision_mask = 1
input_pickable = true
monitorable = true
monitoring = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("CircleShape2D_click")
